--- a/get-forms/index.html
+++ b/get-forms/index.html
@@ -12,7 +12,7 @@
       <label for="site-search">Search the site:</label>
       <input type="search" id="site-search" name="q" />
 
-      <label for="sort-by-type">sort-by-type:</label>
+      <label for="sort-by-type"></label>
       <select name="s" id="sort-by-type">
         <option value="">Select Type</option>
         <option value="stars">Stars</option>
