--- a/get-forms/index.html
+++ b/get-forms/index.html
@@ -17,6 +17,13 @@
       <input type="submit" />
 
       <h2>Choose an option</h2>
+      <select name="s">
+        <option value="Stars">Stars</option>
+        <option value="Forked">Forked</option>
+        <option value="last updated">Last updated</option>
+      </select>
+
+      <h2>Choose an option</h2>
       <select name="o">
         <option value="ascending">ascending</option>
         <option value="descending">descending</option>
