--- a/get-forms/index.html
+++ b/get-forms/index.html
@@ -25,8 +25,8 @@
 
       <h2>Choose an option</h2>
       <select name="o">
-        <option value="ascending">ascending</option>
-        <option value="descending">descending</option>
+        <option value="Ascending">ascending</option>
+        <option value="Descending">descending</option>
       </select>
       <br />
       <br />
