--- a/get-forms/index.html
+++ b/get-forms/index.html
@@ -18,15 +18,15 @@
 
       <h2>Choose an option</h2>
       <select name="s">
-        <option value="Stars">Stars</option>
-        <option value="Forked">Forked</option>
-        <option value="last updated">Last updated</option>
+        <option value="stars">Stars</option>
+        <option value="forked">Forked</option>
+        <option value="lastupdated">Last updated</option>
       </select>
 
       <h2>Choose an option</h2>
       <select name="o">
-        <option value="Ascending">ascending</option>
-        <option value="Descending">descending</option>
+        <option value="asc">ascending</option>
+        <option value="desc">descending</option>
       </select>
       <br />
       <br />
