--- a/get-forms/index.html
+++ b/get-forms/index.html
@@ -19,7 +19,7 @@
       <option value="">Type</option>
       <option value="stars">Stars</option>
       <option value="forks">Forks</option>
-      <option value="last updated">Last updated</option>
+      <option value="updated">Last updated</option>
     </select>
 
     <label for="sort-by-order">Sort by order:</label>
