--- a/get-forms/index.html
+++ b/get-forms/index.html
@@ -12,20 +12,25 @@
       <label for="searchQuery">Search on GitHub:</label>
       <input type="text" id="searchQuery" name="q" placeholder="Enter your search query">
       
+    <section class="sort">
       <div for="sortBy">Sort By:</div>
         <select id="sortBy" name="s">
             <option value="stars">Stars</option>
             <option value="forks">Forks</option>
             <option value="updated">Last Updated</option>
         </select>
-
+      </div>
+      <div>
         <label for="sortOrder">Sort Order:</label>
         <select id="sortOrder" name="o">
             <option value="asc">Ascending</option>
             <option value="desc">Descending</option>
         </select>
+      </div>
+    </section>
 
-        <div><input type="submit" value="Search"></div>
+        
+          <input type="submit" value="Search"></div>
     </form>
   </body>
 </html>
