--- a/get-forms/index.html
+++ b/get-forms/index.html
@@ -8,6 +8,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
   </head>
   <body>
-    <form action="https://github.com/search" method="get"></form>
+    <form action="https://github.com/search" method="get">
+      <Label>Search Item on Github</Label>
+      <input type="text" name="q">
+      <select name="s" id="">
+        <option value="stars">Stars</option>
+        <option value="forks">Forks</option>
+      </select>
+      <select name="o" id="">
+        <option value="asc">Asc</option>
+        <option value="desc">Des</option>
+      </select>
+      <button>Search</button>
+
+
+    </form>
   </body>
 </html>
