cards content added

--- a/components-1/together.html
+++ b/components-1/together.html
@@ -35,9 +35,18 @@
     </nav>
     <main tabindex="0" id="main" class="main">
       <section class="main__deck">
-        <!--=======================
-             PUT THREE CARDS IN HERE 
-             =======================-->
+        <a class="card" href="https://www.currys.co.uk/" target="_blank">
+          <h3 class="card__heading">Buy a Laptop!</h3>
+          <span class="card__emoji">💻</span>
+        </a>
+        <a class="card" href="http://www.oneplusrestaurant.co.uk/" target="_blank">
+          <h3 class="card__heading">Book a restaurant!</h3>
+          <span class="card__emoji">🍲</span>
+        </a>
+        <a class="card" href="https://www.minicabit.com/" target="_blank">
+          <h3 class="card__heading">Are you drunk? Call a taxi!</h3>
+          <span class="card__emoji">🚖</span>
+        </a>
       </section>
     </main>
     <!--=======================
