--- a/components-1/together.html
+++ b/components-1/together.html
@@ -44,7 +44,7 @@
           <span class="card__emoji">🍲</span>
         </a>
         <a class="card" href="https://www.minicabit.com/" target="_blank">
-          <h3 class="card__heading">Are you drunk? Call a Taxi!</h3>
+          <h3 class="card__heading">Are you drunk? Call a taxi!</h3>
           <span class="card__emoji">🚖</span>
         </a>
       </section>
