--- a/components-1/together.html
+++ b/components-1/together.html
@@ -40,7 +40,7 @@
           <span class="card__emoji">💻</span>
         </a>
         <a class="card" href="http://www.oneplusrestaurant.co.uk/" target="_blank">
-          <h3 class="card__heading">Book a restaurant!</h3>
+          <h3 class="card__heading">Book a Restaurant!</h3>
           <span class="card__emoji">🍲</span>
         </a>
         <a class="card" href="https://www.minicabit.com/" target="_blank">
