--- a/components-1/together.html
+++ b/components-1/together.html
@@ -51,7 +51,7 @@
       class="footer-img" alt=""></a>
       <div class="links">
         <button>Contacts</button>
-        <button>About us</button>
+        <button>About Us</button>
         <button>Home</button>
       </div>
       
