Menu commentary changed

--- a/components-2/together.html
+++ b/components-2/together.html
@@ -18,21 +18,9 @@
     =======================-->
   <nav class="menu" id="menu" hidden>
     <ul>
-      <!-- <li>
-        <a href="index.html">Components Workshop</a>
-      </li>
-      <li>
-        <a href="teams.html">Team Generator</a>
-      </li>
-      <li>
-        <a href="docs/card/">Card docs</a>
-      </li>
-      <li>
-        <a href="docs/header">Header docs</a>
-      </li>
-      <li>
-        <a href="docs/footer/">Footer docs</a>
-      </li> -->
+      <!--=======================
+        THE MENU COMPONENT GOES HERE 
+      =======================-->
     </ul>
   </nav>
   <main tabindex="0" id="main" class="main">
