--- a/get-forms/index.html
+++ b/get-forms/index.html
@@ -3,11 +3,43 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title></title>
+    <title>GitHub Repository Search</title>
     <meta name="description" content="My Github Search form" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="styles.css">
   </head>
   <body>
     <form action="https://github.com/search" method="get"></form>
   </body>
+
+    <h1>Search GitHub Repositories</h1>
+    
+    <form id="searchForm">
+        <label for="searchQuery">Search GitHub Repositories:</label>
+        <input type="text" id="searchQuery" name="searchQuery" placeholder="Enter search query" required>
+        
+        <label for="sortCriteria">Sort By:</label>
+        <select id="sortCriteria" name="sortCriteria">
+            <option value="stars">Stars</option>
+            <option value="forks">Forks</option>
+            <option value="updated">Last Updated</option>
+        </select>
+
+        <label for="sortOrder">Order:</label>
+        <select id="sortOrder" name="sortOrder">
+            <option value="desc">Descending</option>
+            <option value="asc">Ascending</option>
+        </select>
+
+        <button type="submit">Search</button>
+    </form>
+
+    <div id="results"></div>
+
+    <script src="script.js"></script>
+</body>
+</html>
+
+
+
 </html>
