adds card component

--- a/components-1/together.html
+++ b/components-1/together.html
@@ -35,9 +35,33 @@
     </nav>
     <main tabindex="0" id="main" class="main">
       <section class="main__deck">
-        <!--=======================
-             PUT THREE CARDS IN HERE 
-             =======================-->
+        <a
+          class="card"
+          href="https://www.nngroup.com/articles/cards-component/"
+        >
+          <h3 class="card__heading">Card</h3>
+          <span class="card__emoji">📇</span>
+        </a>
+        <a href="card.txt" class="card">
+          <h3 class="card__heading">Card HTML</h3>
+          <object
+            class="card__code"
+            data="card.txt"
+            type="text/plain"
+            width="400"
+            height="300"
+          ></object>
+        </a>
+        <a href="styles.css" class="card">
+          <h3 class="card__heading">Card CSS</h3>
+          <object
+            class="card__code"
+            data="styles.css"
+            type="text/css"
+            width="400"
+            height="300"
+          ></object>
+        </a>
       </section>
     </main>
     <!--=======================
