--- a/components-1/together.html
+++ b/components-1/together.html
@@ -57,6 +57,10 @@
         <h3 class="card__heading">Card</h3>
         <span class="card__emoji">📇</span>
       </a>
+      <a class="card" href="https://www.nngroup.com/articles/cards-component/">
+        <h3 class="card__heading">Card</h3>
+        <span class="card__emoji">📇</span>
+      </a>
     </section>
   </main>
   <footer class="footer">
