sometimes i am really obtuse
witsttcpw

--- a/asking-questions/index.html
+++ b/asking-questions/index.html
@@ -63,7 +63,7 @@
         frustrated and quitting coding...or any of the other totally normal,
         human responses we naturally have to being confounded.
       </p>
-      <details id="problem-bank">
+      <details id="problem-bank" open>
         <summary><h3>Problem Bank</h3></summary>
         <p>Use Devtools and look at the code to help you.</p>
         <ul id="problems" class="problems">
