replace extra body element with main

--- a/error-handling/webpage/index.html
+++ b/error-handling/webpage/index.html
@@ -10,7 +10,7 @@
     <header>
         <h1>Broken Buttons</h1>
     </header>
-    <body>
+    <main>
         <p>Enter some text in the box below then click one of the buttons.</p>
         <p>If everything works your message will be added below the box.</p>
         <textarea name="submission" id="submission" cols="30" rows="10"></textarea>
@@ -22,6 +22,6 @@
             <button id="better-alert-button">Button 5</button>
         </section>
         <p>You typed: <span id="output"></span></p>
-    </body>
+    </main>
 </body>
 </html>
